<resources>
    <string name="app_name">TourList</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_trip_details_fragment">Hello, Trip Details Screen!</string>
    <string name="hello_chat_fragment">Hello, Chat Screen!</string>
    <string name="hello_map_fragment">Hello, Map Screen!</string>

    <string name="ar_button">AR</string>
    <string name="location_button">LOC</string>
    <string name="wikitude_key">FZbpQNvIcElXwHT+V0Gytj73ElrYHjl1sanA732esQSm1ZOI5T6rnlHy/o7fLuutcXBsKMGiLqwv14AdIs0/CW67b5fMViw5z+RHoy6FnWpHnLjXqw6goOhiH7MQrCYcarqJa4XnxvvClC1NRDJXWhmWeN9uK5h/rwu/hikTOwdTYWx0ZWRfX2wCy3ZjUdwWy5VYE8Vp0OY1MA/vXDelXQZpjOZWQVFQF4PCAJ9Hmb5ZQfIiOLyFgU4sfIS1ybteLCdagpNqCKPt7usuR29mcRz2oDKWTPpFW/YRlTKNVpEQcne+uT0NrJ5V/D72CEK+IFYxq21MsHxwoAyXv4QnlUWV/j14J31VFkL5/j3UQvPICQuwmT6zzVSH5y665onpY5boqt/AnSVFnIalB8SZj3gtADVzqAV20VHZz8NQZNsdIUq6gJA4puLLKcb9LtBuyD7pWQTbK0l/PEHdBii4Zo5D/WWATvy04C8p9xcXuoOMdPthtY8a5Wq+qEf/jS3RNjZtyFJMmhEqLiv1sx7z4myHPl8JX2E/lBQNf/pYf6mEzucGtZ+Uukz0unuO3g8Swfh1VHnThGQXsqVxhYap7uqQ+HXJU7OQbj+KQ9uCTyP6Glykx4cYmo6rsbcEwjDqzdPQN5B4jR1eSpfN0kyolG3ptGw83rtopY7bI43T2f04NrA1lcMgrJhqlsvMuEPN</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_fragment_current_trip">Current Trip</string>
    <string name="title_fragment_trip_details">Trip Details</string>
    <string name="title_fragment_chat">Chat</string>
    <string name="title_fragment_map">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_augmented_reality">AugmentedRealityActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_aug_reality">I see you</string>
    <string name="title_activity_poidetail">Tell me more</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_search">Search</string>
    <string name="title_fragment_searchresults">Search Results</string>
    <string name="fragment_searchresults_header">Results for:</string>

    <string name="name_title">Trip name</string>
    <string name="Date_title">Date</string>
    <string name="Name_field"></string>
    <string name="Date_field"></string>
    <string name="Size_title">Trip Size</string>
    <string name="Size_small">1-5</string>
    <string name="Size_medium">5-10</string>
    <string name="Size_large">>10</string>
    <string name="Cost_title">Estimated Cost</string>
    <string name="Cost_small">$</string>
    <string name="Cost_medium">$$</string>
    <string name="Cost_large">$$$</string>
    <string name="Apply_button">Apply</string>
    <string name="title_activity_trip">Trip</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="title_activity_success">SuccessActivity</string>


</resources>
